<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Set View Controller-->
        <scene sceneID="s0d-6b-0kx">
            <objects>
                <viewController storyboardIdentifier="SetViewController" id="Y6W-OH-hqX" customClass="SetViewController" customModule="Collections" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="13l-Q9-qfO">
                                <rect key="frame" x="15" y="115.33333333333331" width="360" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u1a-mp-DPl">
                                <rect key="frame" x="15" y="179.33333333333334" width="360" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qkF-Gn-6iQ">
                                <rect key="frame" x="15" y="253.33333333333334" width="360" height="34.333333333333343"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="All matching letters">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="matchingCharatersButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="lCh-P4-jfW"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxb-ab-flt">
                                <rect key="frame" x="15" y="297.66666666666669" width="360" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Has-Ba-0oE">
                                <rect key="frame" x="15" y="307.66666666666669" width="360" height="34.333333333333314"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="All characters that do not match">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="nonMatchingCharactersButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="K75-Bp-i1R"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYZ-gt-9kc">
                                <rect key="frame" x="15" y="352" width="360" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9N-Nn-a3V">
                                <rect key="frame" x="15" y="425.33333333333331" width="360" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LaU-ff-le6">
                                <rect key="frame" x="15" y="362" width="360" height="53.333333333333314"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="All unique characters from the first text field that do not match in text fields">
                                            <attributes>
                                                <font key="NSFont" size="17" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="uniqueCharactersButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="kXY-qX-QKI"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="iYZ-gt-9kc" firstAttribute="top" secondItem="Has-Ba-0oE" secondAttribute="bottom" constant="10" id="0YJ-GT-mRV"/>
                            <constraint firstItem="13l-Q9-qfO" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="trailing" multiplier="15/390" id="0z1-fg-EGf"/>
                            <constraint firstItem="qkF-Gn-6iQ" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="4k8-IY-tWR"/>
                            <constraint firstItem="O9N-Nn-a3V" firstAttribute="top" secondItem="LaU-ff-le6" secondAttribute="bottom" constant="10" id="9mQ-5x-rfc"/>
                            <constraint firstItem="qkF-Gn-6iQ" firstAttribute="top" secondItem="u1a-mp-DPl" secondAttribute="bottom" constant="40" id="BK1-V1-0Xq"/>
                            <constraint firstItem="qkF-Gn-6iQ" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="Cge-6N-7Ww"/>
                            <constraint firstItem="lxb-ab-flt" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="EK6-pg-aWG"/>
                            <constraint firstItem="13l-Q9-qfO" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="bottom" multiplier="120/844" id="K8Q-XZ-fsx"/>
                            <constraint firstItem="iYZ-gt-9kc" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="MKI-Zz-nGj"/>
                            <constraint firstItem="Has-Ba-0oE" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="OOM-yf-9m1"/>
                            <constraint firstItem="iYZ-gt-9kc" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="Pkf-vU-NY6"/>
                            <constraint firstItem="LaU-ff-le6" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="Sel-4n-kSd"/>
                            <constraint firstItem="lxb-ab-flt" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="UAv-zK-Ihr"/>
                            <constraint firstItem="Has-Ba-0oE" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="WO9-Pw-b6W"/>
                            <constraint firstItem="u1a-mp-DPl" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="bRt-Tg-inG"/>
                            <constraint firstItem="Has-Ba-0oE" firstAttribute="top" secondItem="lxb-ab-flt" secondAttribute="bottom" constant="10" id="fh8-YB-Hy8"/>
                            <constraint firstItem="u1a-mp-DPl" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="gp1-G3-Ee2"/>
                            <constraint firstItem="LaU-ff-le6" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="hAh-XW-pic"/>
                            <constraint firstItem="O9N-Nn-a3V" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" id="lqF-bZ-0kI"/>
                            <constraint firstItem="LaU-ff-le6" firstAttribute="top" secondItem="iYZ-gt-9kc" secondAttribute="bottom" constant="10" id="n3Q-hm-Kc2"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="13l-Q9-qfO" secondAttribute="trailing" multiplier="390/375" id="pcE-pe-qqr"/>
                            <constraint firstItem="u1a-mp-DPl" firstAttribute="top" secondItem="13l-Q9-qfO" secondAttribute="bottom" constant="30" id="qz0-Zl-9Ug"/>
                            <constraint firstItem="lxb-ab-flt" firstAttribute="top" secondItem="qkF-Gn-6iQ" secondAttribute="bottom" constant="10" id="vnJ-V8-O4F"/>
                            <constraint firstItem="O9N-Nn-a3V" firstAttribute="leading" secondItem="13l-Q9-qfO" secondAttribute="leading" id="yFE-HX-820"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="firstTextField" destination="13l-Q9-qfO" id="EN8-Ea-Zea"/>
                        <outlet property="matchingCharactersLabel" destination="lxb-ab-flt" id="5OC-QT-dcm"/>
                        <outlet property="nonMatchingCharactersLabel" destination="iYZ-gt-9kc" id="HT6-MI-49e"/>
                        <outlet property="secondTextField" destination="u1a-mp-DPl" id="vEL-TL-ExK"/>
                        <outlet property="uniqueCharactersLabel" destination="O9N-Nn-a3V" id="osh-Yu-KzB"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="115.94202898550725" y="79.6875"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
